@startuml Meet.AI - Corrected ER Diagram

' Visual styling
skinparam linetype ortho
skinparam roundcorner 5
skinparam class {
    BackgroundColor White
    BorderColor DarkSlateGray
    ArrowColor DarkSlateGray
}

' Macros
!define PK <color:GoldenRod><&key></color>
!define FK <color:Silver><&key></color>
!define UK <color:Red><&lock></color>

' ================================================================
' GROUP 1: AUTHENTICATION & SESSION MANAGEMENT
' ================================================================

package "Auth & Session Layer" #F0F0F0 {

  entity "user" as user {
    * PK id : text
    --
    * name : text
    * UK email : text <<unique>>
    * email_verified : boolean [default: false]
    image : text
    * created_at : timestamp [default: now()]
    * updated_at : timestamp [default: now()]
  }

  entity "session" as session {
    * PK id : text
    --
    * FK user_id : text
    * UK token : text <<unique>>
    * expires_at : timestamp
    ip_address : text
    user_agent : text
    * created_at : timestamp
    * updated_at : timestamp
  }



}

' ================================================================
' GROUP 2: CORE DOMAIN ENTITIES
' ================================================================

package "Meeting Intelligence Core" #E8F5E9 {

  entity "agents" as agents {
    * PK id : text [nanoid]
    --
    * FK user_id : text
    * name : text
    * instructions : text
    * created_at : timestamp [default: now()]
    * updated_at : timestamp [default: now()]
  }

  entity "meetings" as meetings {
    * PK id : text [nanoid]
    --
    * FK user_id : text
    * FK agent_id : text
    FK presentation_id : text <<nullable>>
    * status : enum [upcoming|active|completed|processing|cancelled]
    * name : text
    scheduled_at : timestamp
    started_at : timestamp
    ended_at : timestamp
    transcript_url : text
    recording_url : text
    summary : text
    * created_at : timestamp [default: now()]
    * updated_at : timestamp [default: now()]
  }

}

' ================================================================
' GROUP 3: PRESENTATION MANAGEMENT
' ================================================================

package "Presentation & Slides" #FFF3E0 {

  entity "presentations" as presentations {
    * PK id : text [nanoid]
    --
    * FK user_id : text
    * name : text
    * total_slides : integer [default: 0]
    * created_at : timestamp [default: now()]
    * updated_at : timestamp [default: now()]
  }

  entity "presentation_slides" as presentation_slides {
    * PK id : text [nanoid]
    --
    * FK presentation_id : text
    * slide_number : integer
    * text_content : text [default: ""]
    image_url : text
    * created_at : timestamp [default: now()]
  }

}

' ================================================================
' RELATIONSHIPS (Crow's Foot Notation)
' ================================================================

user ||--o{ session : "maintains"
user ||--o{ agents : "creates"
user ||--o{ presentations : "creates"
user ||--o{ meetings : "creates"

agents ||--o{ meetings : "conducts"
presentations ||--o{ presentation_slides : "contains"
presentations |o--o{ meetings : "used in"

' ================================================================
' NOTES
' ================================================================

note left of meetings
  **Status is PostgreSQL Enum**
  (NOT a separate table)
  
  Values:
  • upcoming
  • active
  • completed
  • processing
  • cancelled
end note

note top of user
  **Better Auth Managed**
  OAuth & Email/Password
end note

@enduml
